<resources>
    <string name="app_name">UploadFile</string>
    <string name="app_title">NKUST iParking</string>
    <string name="user_name">User</string>
    <string name="user_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_exit">EXIT</string>
    <string name="dialog_message">帳號或密碼輸入錯誤</string>
    <string name="dialog_title">提醒</string>
    <string name="text_homepage">首頁</string>
    <string name="text_record">記錄</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_map">Maps</string>
    <string name="action_logout">Logout</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_message1">This app is for testing on Android UI Design.</string>
    <string name="dialog_title1">Settings</string>
    <string name="dialog_title2">是否新增罰單?</string>
    <string name="dialog_message2">是否新增罰單?</string>
    <string name="addticket">新增罰單</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="Admit">送出</string>
    <string name="Cancel">取消</string>
    <string name="carPlate">車牌號碼：</string>
    <string name="Why">違規原因：</string>
    <string name="where">地點：</string>
    <string name="reset">忘記密碼</string>
    <string-array name="spinnerwhy">
        <item>違規停放</item>
        <item>未戴安全帽</item>
        <item>未貼車證</item>
        <item>占用殘障車位</item>
    </string-array>
    <string-array name="spinnerwhere">
        <item>東校區門口</item>
        <item>西校區門口</item>
        <item>機車停車場(一)</item>
        <item>機車停車場(二)</item>
        <item>教學區</item>
        <item>男生宿舍</item>
        <item>女生宿舍</item>
    </string-array>
</resources>
